--- a/assignments/solutions/2021-10-10-exercise05.html
+++ b/assignments/solutions/2021-10-10-exercise05.html
@@ -43,13 +43,16 @@
         <h1>Hints / Solutions to Exercise sheet 5</h1>
     </section>
     <section>
-<p class="date"><strong>Last modified: 04:51 PM - 19 October, 2021 </strong></p>
+<p class="date"><strong>Last modified: 12:32 AM - 20 October, 2021 </strong></p>
 	  
 	  <a href="../../assignments/solutions/pdfs/2021-10-10-exercise05.pdf">PDF version</a>
 	  
         <p><strong>Question 5:</strong> Consider a (plane) curve parametrized by a unit speed parametrization <span class="math inline">\(\gamma : (a, b) \to \mathbf{R}^2\)</span> and a point on that curve <span class="math inline">\(p = \gamma(t_0)\)</span>. We will find a circle which best approximates the curve at <span class="math inline">\(p\)</span>, in the sense defined below. This will give another perspective on curvature. To solve this exercise, you need to be familiar with using derivatives to find out local maxima or minima.</p>
 <p><strong>Solution 5:</strong><br />
-Part 1. <span class="math inline">\(\mathbf{N}_s(t)\)</span> is perpendicular to <span class="math inline">\(\mathbf{T}(t)\)</span> which coincides with the tangent of the circle, so <span class="math inline">\(\mathbf{N}_s(t)\)</span> is the line containing it is perpendicular to the tangent line of the circle at the same point. Such a line always contains the center of the circle.</p>
+<img src="images/osculating.png" style="width:10cm" alt="image" /><br />
+<span><em><span class="math inline">\(\gamma(t)\)</span> parametrizes the curve in red. Note that in the vicinity of the point of contact, the red curve lies inside the bigger circle but outside the smaller circle. Big circles are those which contain at least some vicinity of the point of contact; small circles are those which exclude at least some vicinity of the point of contact; there is a circle of just the right size that does neither, which we think of as the circle approximating the curve at the point of contact just as the tangent line maybe thought of as the line approximating the curve at the point of contact. This exercise shows that the curvature of this circle is indeed the curvature of the curve at that point.</em></span><br />
+</p>
+<p>Part 1. <span class="math inline">\(\mathbf{N}_s(t)\)</span> is perpendicular to <span class="math inline">\(\mathbf{T}(t)\)</span> which coincides with the tangent of the circle, so <span class="math inline">\(\mathbf{N}_s(t)\)</span> is the line containing it is perpendicular to the tangent line of the circle at the same point. Such a line always contains the center of the circle.</p>
 <p>Part 2. The center of the circle is a translate of <span class="math inline">\(p\)</span> in the direction of <span class="math inline">\(\mathbf{N}_s(t)\)</span> so it is in the same direction as the normal of a circle. The circle’s tangent is perpendicular to the normal, but so is the tangent of the curve and so they coincide.</p>
 <p>Part 3. The expression in the norm is measuring the distance of <span class="math inline">\(\gamma(t)\)</span> from the center of the circle. When it is exactly the radius, it lies on the circle, when it is bigger than the radius, it lies outside the circle.</p>
 <p>Part 4. There is some <span class="math inline">\(\epsilon\)</span> so that for any <span class="math inline">\(t\in (t_0 - \epsilon, t_0 + \epsilon)\)</span>, <span class="math inline">\(d(t) \geq r^2\)</span>. However, at <span class="math inline">\(d(t_0)=r\)</span> so in this small interval, <span class="math inline">\(d\)</span> attains its minimum at <span class="math inline">\(t_0\)</span>.</p>
