corrected pdf links to comments

--- a/assignments/solutions/2021-09-10-exercise01.html
+++ b/assignments/solutions/2021-09-10-exercise01.html
@@ -120,14 +120,14 @@
         <li>
             <a href="../../posts/2021-10-19-osculating.html">Osculating circles</a> - 19 October, 2021 (Tuesday)
 	  
-	  (<a href="posts/pdfs/2021-10-19-osculating.pdf">PDF file</a>)
+	  (<a href="../../posts/pdfs/2021-10-19-osculating.pdf">PDF file</a>)
 	  
         </li>
     
         <li>
             <a href="../../posts/2021-10-17-orthonormal-basis.html">The importance of orthonormal basis</a> - 17 October, 2021 (Sunday)
 	  
-	  (<a href="posts/pdfs/2021-10-17-orthonormal-basis.pdf">PDF file</a>)
+	  (<a href="../../posts/pdfs/2021-10-17-orthonormal-basis.pdf">PDF file</a>)
 	  
         </li>
     
