--- a/assignments/solutions/2021-09-13-exercise02.html
+++ b/assignments/solutions/2021-09-13-exercise02.html
@@ -145,14 +145,14 @@ We actually need to assume that <span class="math inline">\(\gamma\)</span> is r
         <li>
             <a href="../../posts/2021-10-19-osculating.html">Osculating circles</a> - 19 October, 2021 (Tuesday)
 	  
-	  (<a href="posts/pdfs/2021-10-19-osculating.pdf">PDF file</a>)
+	  (<a href="../../posts/pdfs/2021-10-19-osculating.pdf">PDF file</a>)
 	  
         </li>
     
         <li>
             <a href="../../posts/2021-10-17-orthonormal-basis.html">The importance of orthonormal basis</a> - 17 October, 2021 (Sunday)
 	  
-	  (<a href="posts/pdfs/2021-10-17-orthonormal-basis.pdf">PDF file</a>)
+	  (<a href="../../posts/pdfs/2021-10-17-orthonormal-basis.pdf">PDF file</a>)
 	  
         </li>
     
