--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@ Room 7: MS20207 -</p>
         <li>
             <a href="./posts/2021-10-19-osculating.html">Osculating circles</a> - 19 October, 2021 (Tuesday)
 	  
-	  (<a href="posts/pdfs/2021-10-19-osculating.pdf">PDF file</a>)
+	  (<a href="./posts/pdfs/2021-10-19-osculating.pdf">PDF file</a>)
 	  
         </li>
     
         <li>
             <a href="./posts/2021-10-17-orthonormal-basis.html">The importance of orthonormal basis</a> - 17 October, 2021 (Sunday)
 	  
-	  (<a href="posts/pdfs/2021-10-17-orthonormal-basis.pdf">PDF file</a>)
+	  (<a href="./posts/pdfs/2021-10-17-orthonormal-basis.pdf">PDF file</a>)
 	  
         </li>
     
