--- a/assignments/2021-10-26-exercise06.html
+++ b/assignments/2021-10-26-exercise06.html
@@ -49,7 +49,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 12:33 PM - 27 October, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 11:15 AM -  2 November, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-10-26-exercise06.pdf">PDF version</a>
 	  
@@ -76,6 +76,8 @@
 <li><p>The curvature and torsion of <span class="math inline">\(\delta\)</span> is the same as the curvature and torsion of <span class="math inline">\(\gamma\)</span> at <span class="math inline">\(t\)</span>.</p></li>
 <li><p>If <span class="math inline">\(\mathbf{T}_1(t)\)</span>, <span class="math inline">\(\mathbf{N}_1(t)\)</span> and <span class="math inline">\(\mathbf{B}_1(t)\)</span> denote the unit tangent, unit normal, and unit binormal of <span class="math inline">\(\gamma\)</span> at <span class="math inline">\(t\)</span>, while <span class="math inline">\(\mathbf{T}_2(t)\)</span>, <span class="math inline">\(\mathbf{N}_2(t)\)</span> and <span class="math inline">\(\mathbf{B}_2(t)\)</span> denote the unit tangent, unit normal of <span class="math inline">\(\delta\)</span> at <span class="math inline">\(t\)</span>, then prove that, <span class="math display">\[\mathbf{T}_2(t) = A (\mathbf{T}_1(t))\]</span> <span class="math display">\[\mathbf{N}_2(t) = A (\mathbf{N}_1(t))\]</span> <span class="math display">\[\mathbf{B}_2(t) = A (\mathbf{B}_1(t))\]</span></p></li>
 </ol></li>
+<li><p>If <span class="math inline">\(\sigma : U \to \mathbb{R}^3\)</span> is a surface patch, and <span class="math inline">\(p \in \mathbb{R}^3\)</span> lies on its image, then prove that any linear combination of the vectors <span class="math inline">\(\sigma_x(p)\)</span> and <span class="math inline">\(\sigma_y(p)\)</span> is a tangent vector, i.e. show that it is the velocity vector of some curve on the surface.</p></li>
+<li><p>Prove that if a surface is regular, then the space of tangent vectors is 2-dimensional.</p></li>
 </ol>
     </section>
 </article>
