finished exercise set 6

--- a/assignments/2021-10-26-exercise06.html
+++ b/assignments/2021-10-26-exercise06.html
@@ -49,7 +49,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 11:15 AM -  2 November, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 05:50 PM -  5 November, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-10-26-exercise06.pdf">PDF version</a>
 	  
@@ -78,6 +78,15 @@
 </ol></li>
 <li><p>If <span class="math inline">\(\sigma : U \to \mathbb{R}^3\)</span> is a surface patch, and <span class="math inline">\(p \in \mathbb{R}^3\)</span> lies on its image, then prove that any linear combination of the vectors <span class="math inline">\(\sigma_x(p)\)</span> and <span class="math inline">\(\sigma_y(p)\)</span> is a tangent vector, i.e. show that it is the velocity vector of some curve on the surface.</p></li>
 <li><p>Prove that if a surface is regular, then the space of tangent vectors is 2-dimensional.</p></li>
+<li><p>Let <span class="math inline">\(f(x, y) = x\mathrm{sin}(x+2y)\)</span>. Find <span class="math inline">\(f_x\)</span>, <span class="math inline">\(f_y\)</span>, <span class="math inline">\(f_{xy}\)</span>, and <span class="math inline">\(f_{yx}\)</span>.</p></li>
+<li><p>Use the chain rule of partial derivatives to show that if <span class="math inline">\(f :\mathbb{R} \to \mathbb{R}\)</span> is a smooth function such that <span class="math inline">\(y= f(x)\)</span> satisfies <span class="math inline">\(F(x, y) = 0\)</span>, where <span class="math inline">\(F:\mathbb{R}^2 \to \mathbb{R}\)</span> is also a smooth function, then <span class="math inline">\(\frac{\mathrm{d}y}{\mathrm{d}x}= -\frac{F_x}{F_y}\)</span>. This is called implicit differentiation.</p></li>
+<li><p>Let <span class="math inline">\(f : \mathbb{R}^2 \to \mathbb{R}\)</span> be a smooth function and let <span class="math inline">\((x_0, y_0)\)</span> be a point in <span class="math inline">\(\mathbb{R}^2\)</span> and <span class="math inline">\(\mathbf{v} = (v_1, v_2)\)</span> a vector. Define <span class="math inline">\(F = f(x_0+v_1t, y_0+v_2t)\)</span>. Use the chain rule for partial derivatives to show that <span class="math inline">\(F'(0)= f_x(x_0,y_0)v_1 + f_y(x_0, y_0)v_2 = (f_x(x_0,y_0), f_y(x_0, y_0)) \cdot \mathbf{v}\)</span>. Note that <span class="math inline">\(F'(0)= \displaystyle\lim_{t \to 0}\frac{f(x_0 + tv_1, y_0 + tv_2) -f(x_0, y_0)}{t}\)</span>; it is called the directional derivative of <span class="math inline">\(f\)</span> in the direction of <span class="math inline">\(\mathbf{v}\)</span> and is denoted by <span class="math inline">\(f_\mathbf{v}\)</span>. This exercise shows that one can compute the directional derivative of <span class="math inline">\(f\)</span> in the direction of any vector <span class="math inline">\(\mathbf{v}\)</span> if one knows the partial derivatives of <span class="math inline">\(f\)</span>.</p></li>
+<li><p>Which of the following surface patches are regular?</p>
+<ol>
+<li><p><span class="math inline">\(\sigma: \mathbb{R}^2 \to \mathbb{R}^3\)</span>, <span class="math inline">\(\sigma(x,y) = (x, y, x+y)\)</span></p></li>
+<li><p><span class="math inline">\(\sigma: \mathbb{R}^2 \to \mathbb{R}^3\)</span>, <span class="math inline">\(\sigma(x,y) = (x, x^2, y^3)\)</span></p></li>
+</ol></li>
+<li><p>For an open subset <span class="math inline">\(U\)</span> of <span class="math inline">\(\mathbb{R}^2\)</span>, and a smooth map <span class="math inline">\(f: U \to \mathbb{R}^3\)</span>, show that around any point in the set <span class="math inline">\(S:=\{(x, y, f(x, y)) \ |\ (x, y) \in \mathbb{R}^2\}\)</span>, we can find a smooth and regular surface patch.</p></li>
 </ol>
     </section>
 </article>
