--- a/assignments/2021-11-13-exercises07.html
+++ b/assignments/2021-11-13-exercises07.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>2021-09-24-exercise03 - MTH201</title>
+  <title>2021-11-13-exercises07 - MTH201</title>
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" type="text/css">
@@ -40,39 +40,26 @@
     <section id="pagecontent">
         <article>
     <section class="header">
-        <h1>Exercise sheet 3</h1>
+        <h1>Exercise sheet 7</h1>
     </section>
     <section>
       <p>
 	
-	<a href="../assignments/2021-09-13-exercise02.html" class="prev"><<</a>
+	<a href="../assignments/2021-10-26-exercise06.html" class="prev"><<</a>
 	
-	
-	<a href="../assignments/2021-10-01-exercise04.html" style="float:right" class="next">>></a>
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 02:09 PM - 24 September, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 07:48 AM - 13 November, 2021 </strong></p>
 	  
-	  <a href="../assignments/pdfs/2021-09-24-exercise03.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2021-11-13-exercises07.pdf">PDF version</a>
 	  
 	  
-	  <br />
-	  <a href="../assignments/solutions/2021-09-24-exercise03.html">Hints or Solutions</a> / 
-	  <a href="../assignments/solutions/pdfs/2021-09-24-exercise03.pdf">Hints or Solutions PDF</a>
-	  
-        <ol>
-<li><p>In an earlier exercise you found the parametrization of a line segment joining two points. Use that parametrization to find the arc length of the line segment in terms of its end points. Try with some other parametrization too.</p></li>
-<li><p>These steps will show that the line segment joining two points is the shortest possible curve joining the two points:</p>
+        <p>For all these questions, <span class="math inline">\(\mathbf{\hat{n}}(p):=\sigma_x(p)\times \sigma_y(p)\)</span></p>
 <ol>
-<li><p>Show that <span class="math inline">\(\mathbf{v}. \mathbf{w} \leq \|\mathbf{v} \| \|\mathbf{w}  \|\)</span> for any two vectors <span class="math inline">\(\mathbf{v}\)</span> and <span class="math inline">\(\mathbf{w}\)</span></p></li>
-<li><p>Show that <span class="math inline">\(\|\mathbf{v} \| = \mathbf{v} . \frac{\mathbf{v} }{\|\mathbf{v}\| }\)</span>. This provides another way to obtain the norm of a vector: take its dot product with a unit vector in the same direction.</p></li>
-<li><p>The previous part shows that <span class="math inline">\(\|\gamma(t_1) - \gamma(t_0)\| = (\gamma(t_1) - \gamma(t_0))  . \frac{\gamma(t_1) - \gamma(t_0)}{\| \gamma(t_1) - \gamma(t_0) \|}\)</span>. Now use the fundamental theorem of calculus to (carefully!) prove that <span class="math inline">\(\|\gamma(t_1) - \gamma(t_0)\| = \int_{t_0}^{t_1} \dot{\gamma}(t)  . \frac{\gamma(t_1) - \gamma(t_0)}{\| \gamma(t_1) - \gamma(t_0) \|}\mathrm{d}t\)</span></p></li>
-<li><p>Use the previous and first part to prove that <span class="math inline">\(\|\gamma(t_1) - \gamma(t_0)\| \leq \int_{t_0}^{t_1} \|\dot{\gamma}(t)\|\mathrm{d}t\)</span>. Note that this shows that the distance between the end points is always less than or equal to the arc length of a curve joining the two end points.</p></li>
-</ol></li>
-<li><p>If a parametrization <span class="math inline">\(\gamma :(\alpha,\beta) \to \mathbb{R}^3\)</span> satisfies the condition that <span class="math inline">\(\|\ddot{\gamma}(t)\| = 0\)</span> for all <span class="math inline">\(t\)</span>, what kind of curve will it trace out?</p></li>
-<li><p>If a parametrization <span class="math inline">\(\gamma :(\alpha,\beta) \to \mathbb{R}^3\)</span> satisfies the condition that <span class="math inline">\(\ddot{\gamma}(t)\)</span> is constant, what kind of curve will it trace out?</p></li>
+<li><p>Prove that <span class="math inline">\(\mathbf{\hat{n}}(\gamma(t))\)</span> is perpendicular to <span class="math inline">\(\mathbf{T}(t)\)</span>.</p></li>
+<li><p>Prove that <span class="math inline">\(\mathbf{N}(t) = \mathbf{\hat{n}}(t)\)</span> if and only if <span class="math inline">\(\kappa_g(t)=0\)</span></p></li>
+<li><p>Prove that the area can be expressed entirely in terms of the first fundamental form. <span class="math display">\[A_\sigma(R) = \int_R \sqrt{E(x,y) G(x,y) - F^2(x,y)}\mathrm{d}x\mathrm{d}y\]</span></p></li>
 </ol>
-<p>to be updated...</p>
     </section>
 </article>
 
