updated exercise sheet

--- a/assignments/2021-11-13-exercises07.html
+++ b/assignments/2021-11-13-exercises07.html
@@ -49,7 +49,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 07:48 AM - 13 November, 2021 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 03:04 AM - 20 November, 2021 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2021-11-13-exercises07.pdf">PDF version</a>
 	  
@@ -59,6 +59,15 @@
 <li><p>Prove that <span class="math inline">\(\mathbf{\hat{n}}(\gamma(t))\)</span> is perpendicular to <span class="math inline">\(\mathbf{T}(t)\)</span>.</p></li>
 <li><p>Prove that <span class="math inline">\(\mathbf{N}(t) = \mathbf{\hat{n}}(t)\)</span> if and only if <span class="math inline">\(\kappa_g(t)=0\)</span></p></li>
 <li><p>Prove that the area can be expressed entirely in terms of the first fundamental form. <span class="math display">\[A_\sigma(R) = \int_R \sqrt{E(x,y) G(x,y) - F^2(x,y)}\mathrm{d}x\mathrm{d}y\]</span></p></li>
+<li><p>How does the matrix of the first fundamental form vary with a coordinate transformation?</p></li>
+<li><p>Prove that if the surface patch is regular then the matrix of the first fundamental form is invertible.</p></li>
+<li><p>Recall the definition of <span class="math inline">\(D_p(f) : T_p(S) \to T_p(S)\)</span></p>
+<ol>
+<li><p>Show that <span class="math inline">\(D_p(Id_S) = Id_{T_p(S)}\)</span></p></li>
+<li><p>Show that <span class="math inline">\(D_p(f \circ g) = D_p(f) \circ D_p(g)\)</span> where <span class="math inline">\(g : S_1 \to S_2\)</span> and <span class="math inline">\(f : S_2 \to S_3\)</span> are smooth functions between surfaces.</p></li>
+<li><p>Prove that if <span class="math inline">\(f\)</span> is smooth with a smooth inverse, then <span class="math inline">\(D_p(f)\)</span> is invertible.</p></li>
+</ol></li>
+<li><p>Prove that <span class="math inline">\(\mathcal{W}\mathbf{v}.\mathbf{w} = \mathcal{W}\mathbf{w}.\mathbf{v}\)</span></p></li>
 </ol>
     </section>
 </article>
